02_kubernetes/05_ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: <subnet-id>, <subnet-id>
  finalizers:
  - ingress.k8s.aws/resources
  labels:
    app: ingress
  name: ingress
  namespace: default
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
